2002-02-23  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/manifest.py (write_manifest): some api 
	modifications for productmaker.py.

	* SkunkWeb/Services/product/productmaker.py: so far, just a function that 
	builds a product archive; script and wizard still incomplete.

2002-02-22  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/loader.py (ProductMountPoint): 
	now use dynamic mounting for product docroots.

	* pylibs/vfs/vfs.py (MultiFS): dynamic mounting
	is now possible.

	* pylibs/wizard.py: adding Rich Salz's wizard.py (version 2.0),
	with his permission.

	* SkunkWeb/Services/product/loader.py (Product.load): now do
	version comparisons using strnatcmp.

2002-02-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/__init__.py, 
	SkunkWeb/Services/product/loader.py (Product.__reallyload):
	removed reference to defaultProductLibdir and kin; corrected
	docstring some.

	* SkunkWeb/SkunkWeb/bootloader.py.in (init): for restart,
	uninstall the import hook.	

	* pylibs/vfs/vfs.py (_keyRE): I forgot to compile this regex,
	causing an error on swmgr restart.

	* SkunkWeb/Services/product/loader.py: removed unnecessary
	import. 

	* pylibs/vfs/importer.py (uninstall): fixed typo; no longer
	delete __oldimport__ (leaving it around doesn't hurt).

	* pylibs/vfs/zipfs.py (ZipFS.isdir), pylibs/vfs/tarfs.py
	(TarFS.isdir): 	no longer raise an exception when calling isdir on
	a nonexistent file. 

	* SkunkWeb/Services/product/loader.py (Product.__reallyload): use
	the new vfs.importer; no longer mount the libfs on the multifs,
	since it is easier to import directly from the archive file, and
	the sys.path entry refers to the archive file fs by registered key.

	* pylibs/vfs/vfs.py (VFSRegistry, registerFS): added vfs registry,
	to support vfs urls, used by vfs.importer and product service.

	* pylibs/vfs/importer.py: totally rewritten to use Gordon
	McMillan's iu module (with his generous permission).
